[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineflow"
version = "0.6.16"
description = "Load any data in one line of code and connect with AI applications"
authors = ["Leonardo Furnielis <leonardofurnielis@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
documentation = "https://run-pine.github.io/pineflow/"
repository = "https://github.com/run-pine/pineflow"
packages = [{include = "pineflow"}]
keywords = ["AI", "LLM", "QA", "RAG", "data", "monitor", "retrieval", "semantic-search"]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^1.7.0"
sentence-transformers = "^4.1.0"
pydantic = "^2.11.5"
torch = "^2.7.1"
numpy = "^2.2.6"
nltk = "^3.9.1"
tiktoken = "^0.9.0"
certifi = "^2025.4.26"
deprecated = "^1.2.18"

[tool.poetry.group.dev.dependencies]
ruff="^0.11.13"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2024.8.6"
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"

[tool.ruff]
extend-exclude = ["docs"]

[tool.ruff.lint]
ignore = ["D417"]
extend-select = [
    "I",
    "B009",
    "B010",
    "B011",
    "B013",
    "B014",
    "D201",
    "D202",
    "D204",
    "D207",
    "D208",
    "D209",
    "D211",
    "D214",
    "D215",
    "D3",
    "D4",
    "FLY",
    "G010",
    "PERF1",
    "PIE794",
    "PIE808",
    "PLE2510",
    "PLR1711",
    "RET501",
    "RET502",
    "RET503",
    "RET504",
    "SIM101",
    "SIM103",
    "SIM109",
    "SIM118",
    "SIM2",
    "SIM300",
    "SIM9",
    "TID",
    "Q"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
