[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineflow"
version = "0.6.18"
description = "Load any data in one line of code and connect with AI applications"
authors = ["Leonardo Furnielis <leonardofurnielis@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
documentation = "https://run-pine.github.io/pineflow/"
repository = "https://github.com/run-pine/pineflow"
packages = [{include = "pineflow"}]
keywords = ["AI", "LLM", "QA", "RAG", "data", "monitor", "retrieval", "semantic-search"]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^1.7.0"
sentence-transformers = "^4.1.0"
pydantic = "^2.11.5"
torch = "^2.7.1"
numpy = "^2.2.6"
nltk = "^3.9.1"
tiktoken = "^0.9.0"
certifi = "^2025.4.26"
deprecated = "^1.2.18"

[tool.poetry.group.dev.dependencies]
ruff="^0.11.13"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2024.8.6"
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-favicon = "^1.0.1"

[tool.ruff]
extend-exclude = ["docs"]
target-version = "py310"

[tool.ruff.lint]
ignore = ["D417", "COM812"]
select = [
    "B009",
    "B010",
    "B011",
    "B013",
    "B014",
    "C4",
    "COM819",
    "D201",
    "D202",
    "D204",
    "D207",
    "D208",
    "D209",
    "D211",
    "D213",
    "D214",
    "D215",
    "D3",
    "D4",
    "F504",
    "F541",
    "F632",
    "FLY",
    "G010",
    "I",
    "PERF1",
    "PIE790",
    "PIE794",
    "PIE808",
    "PIE810",
    "PLC0414",
    "PLE2510",
    "PLE2512",
    "PLE2513",
    "PLE2514",
    "PLE2515",
    "PLR1711",
    "PT001",
    "PT003",
    "PT006",
    "PTH201",
    "PYI",
    "Q",
    "RET501",
    "RET502",
    "RET503",
    "RET504",
    "RSE",
    "RUF005",
    "RUF010",
    "RUF015",
    "SIM101",
    "SIM103",
    "SIM109",
    "SIM118",
    "SIM2",
    "SIM300",
    "SIM9",
    "TC005",
    "TD006",
    "TID",
    "TRY201",
    "W",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"
