[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow"
version = "0.7.0"
description = "Load any data in one line of code and connect with AI applications"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["AI", "LLM", "QA", "RAG", "data", "monitor", "retrieval", "semantic-search"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pineflow-core==0.7.2",
    "pineflow-embeddings-huggingface>=0.7.1,<0.8.0",
    "pineflow-readers-docling>=0.7.2,<0.8.0",
    "pineflow-readers-file>=0.7.1,<0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-favicon>=1.0.1",
]

[project.urls]
Documentation = "https://run-pineflow.github.io/pineflow/"
Repository = "https://github.com/run-pineflow/pineflow"

[tool.hatch.build.targets.sdist]
include = ["_pineflow/pineflow"]

[tool.hatch.build.targets.wheel]
include = ["_pineflow/pineflow"]

[tool.hatch.build.targets.wheel.sources]
"_pineflow/pineflow" = "pineflow"

[tool.ruff]
extend-exclude = ["docs"]
target-version = "py310"

[tool.ruff.lint]
ignore = ["D417", "COM812", "E501"]
select = [
    "B009",
    "B010",
    "B011",
    "B013",
    "B014",
    "C4",
    "COM819",
    "D201",
    "D202",
    "D204",
    "D207",
    "D208",
    "D209",
    "D211",
    "D213",
    "D214",
    "D215",
    "D3",
    "D4",
    "E",
    "F504",
    "F541",
    "F632",
    "FLY",
    "G010",
    "I",
    "PERF1",
    "PIE790",
    "PIE794",
    "PIE808",
    "PIE810",
    "PLC0414",
    "PLE2510",
    "PLE2512",
    "PLE2513",
    "PLE2514",
    "PLE2515",
    "PLR1711",
    "PT001",
    "PT003",
    "PT006",
    "PTH201",
    "PYI",
    "Q",
    "RET501",
    "RET502",
    "RET503",
    "RET504",
    "RSE",
    "RUF005",
    "RUF010",
    "RUF015",
    "SIM101",
    "SIM103",
    "SIM109",
    "SIM118",
    "SIM2",
    "SIM300",
    "SIM9",
    "TC005",
    "TD006",
    "TID",
    "TRY201",
    "W",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"
