[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow-core"
version = "0.7.9"
description = "Load any data in one line of code and connect with AI applications"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["AI", "LLM", "QA", "RAG", "data", "monitor", "retrieval", "semantic-search"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "deprecated>=1.2.18,<2.0.0",
    "nltk>=3.9.1,<4.0.0",
    "numpy>=1.26.4,<1.27.0",
    "pydantic>=2.11.5,<3.0.0",
    "tiktoken>=0.9.0,<0.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]

[project.urls]
Documentation = "https://run-pineflow.github.io/pineflow/"
Repository = "https://github.com/run-pineflow/pineflow"

[tool.hatch.build.targets.sdist]
include = ["pineflow/"]

[tool.hatch.build.targets.wheel]
include = ["pineflow/"]
