[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineflow-embeddings-watsonx"
version = "0.7.0"
description = "pineflow embeddings watsonx extension"
authors = ["Leonardo Furnielis <leonardofurnielis@outlook.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "pineflow"}]

[tool.poetry.dependencies]
ibm-watsonx-ai = "^1.3.26"
pineflow-core = "^0.7.1"

[tool.poetry.group.dev.dependencies]
ruff="^0.11.13"
