[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow-embeddings-watsonx"
version = "0.7.1"
description = "pineflow embeddings watsonx extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "ibm-watsonx-ai>=1.3.26,<2.0.0",
    "pineflow-core>=0.7.2,<0.8.0",
]

[tool.hatch.build.targets.sdist]
include = ["pineflow/"]

[tool.hatch.build.targets.wheel]
include = ["pineflow/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
