[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineflow-monitors-watsonx"
version = "0.7.0"
description = "pineflow monitors watsonx integration"
authors = ["Leonardo Furnielis <leonardofurnielis@outlook.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "pineflow"}]

[tool.poetry.dependencies]
elasticsearch = "^8.18.1"
pineflow-core = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff="^0.11.13"
