[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow-monitors-watsonx"
version = "0.7.5"
description = "pineflow monitors watsonx extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "certifi>=2025.4.26,<2026.0.0",
    "ipython==8.37.0",
    "ibm-aigov-facts-client>=1.0.95,<1.1.0",
    "ibm-watson-openscale>=3.0.47,<3.1.0",
    "ibm-watsonx-ai>=1.3.26,<2.0.0",
    "pineflow-core>=0.7.5,<0.8.0",
]

[tool.hatch.build.targets.sdist]
include = ["pineflow/"]

[tool.hatch.build.targets.wheel]
include = ["pineflow/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
