[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineflow-readers-file"
version = "0.7.0"
description = "pineflow readers file integration"
authors = ["Leonardo Furnielis <leonardofurnielis@outlook.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "pineflow"}]

[tool.poetry.dependencies]
pypdf = "^5.6.0"
jq = "^1.9.1"
beautifulsoup4 = "^4.13.4"
docx2txt = "^0.9"
pineflow-core = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff="^0.11.13"
