[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow-readers-ibm-cos"
version = "0.7.1"
description = "pineflow readers ibm cloud object storage extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "ibm-cos-sdk>=2.14.2,<3.0.0",
    "pineflow-core>=0.7.2,<0.8.0",
]

[tool.hatch.build.targets.sdist]
include = ["pineflow/"]

[tool.hatch.build.targets.wheel]
include = ["pineflow/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
