[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pineflow-readers-watson-discovery"
version = "0.7.1"
description = "pineflow readers watson discovery extension"
authors = ["Leonardo Furnielis <leonardofurnielis@outlook.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "pineflow"}]

[tool.poetry.dependencies]
ibm-watson = "^10.0.0"
pineflow-core = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff="^0.11.13"
