[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow-vector-stores-chroma"
version = "0.7.1"
description = "pineflow vector_stores chroma extension chroma"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "chromadb>=1.0.13,<1.1.0",
    "pineflow-core>=0.7.2,<0.8.0",
]

[tool.hatch.build.targets.sdist]
include = ["pineflow/"]

[tool.hatch.build.targets.wheel]
include = ["pineflow/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
