[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineflow-vector-stores-elasticsearch"
version = "0.7.1"
description = "pineflow vector_stores elasticsearch extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "elasticsearch>=8.18.1,<9.0.0",
    "pineflow-core>=0.7.2,<0.8.0",
]

[tool.hatch.build.targets.sdist]
include = ["pineflow/"]

[tool.hatch.build.targets.wheel]
include = ["pineflow/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
